--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,11 @@
 html * {
     font-family: 'Montserrat', sans-serif;
-    color:#366768;
+    color: #366768;
+}
+
+html,body {
+    width: 100%;
+    height: 100%;
 }
 
 img {
@@ -10,7 +15,7 @@ img {
 
 textarea {
     width: 100%;
-    height:200px;
+    height: 70%;
     background-color: #ffe6cc;
 }
 
@@ -23,10 +28,13 @@ button {
     display: inline-block;
     font-size: 16px;
     color: white;
+    height: 10%
 }
 
 .links {
     text-align: right;
+    margin-right: 20px;
+    height: 10%;
 }
 
 .dark-theme {
@@ -68,7 +76,7 @@ button {
     main { 
         grid-area: 2 / 2 / 3 / 3;
         padding-bottom: 30px;
-        height: fit-content;
+        height: 100%;
     }
 
     footer { 
